[gd_scene load_steps=5 format=3 uid="uid://dspvwnb0tiyjg"]

[ext_resource type="PackedScene" uid="uid://dl15kh0veqeuc" path="res://scenes/UI/menus/base mode menu/base_mode_menu.tscn" id="1_3owgy"]
[ext_resource type="Script" uid="uid://bsk1sjvowwt54" path="res://scripts/UI/menus/main menu/main_menu.gd" id="1_f6swy"]
[ext_resource type="Texture2D" uid="uid://cbc6q81fku8u" path="res://assets/backgrounds/menu background.jpg" id="2_oubjp"]
[ext_resource type="PackedScene" uid="uid://cybb6v2063up5" path="res://scenes/UI/menus/advanced mode menu/advanced_mode_menu.tscn" id="3_x7x50"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_f6swy")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_oubjp")
expand_mode = 4

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.27451, 0.647059, 0.882353, 1)

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_top = 100.0
offset_right = 25.0
offset_bottom = 123.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.877616, 0.877616, 0.877616, 1)
theme_override_font_sizes/font_size = 64
text = "Off Bit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuSwapper" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModeSelector" type="VBoxContainer" parent="MenuSwapper"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -33.0
offset_right = 66.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BaseModeButton" type="Button" parent="MenuSwapper/ModeSelector"]
layout_mode = 2
text = "Base mode"

[node name="AdvancedModeButton" type="Button" parent="MenuSwapper/ModeSelector"]
layout_mode = 2
text = "Advanced Mode"

[node name="BaseModeMenu" parent="MenuSwapper" instance=ExtResource("1_3owgy")]
visible = false
layout_mode = 1
offset_left = -34.5
offset_top = -50.5
offset_right = 34.5
offset_bottom = 50.5

[node name="AdvancedModeMenu" parent="MenuSwapper" instance=ExtResource("3_x7x50")]
visible = false
layout_mode = 1

[node name="BackButton" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 111.5
offset_top = -243.5
offset_right = 156.5
offset_bottom = -212.5
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[connection signal="pressed" from="MenuSwapper/ModeSelector/BaseModeButton" to="." method="_on_base_mode_button_pressed"]
[connection signal="pressed" from="MenuSwapper/ModeSelector/AdvancedModeButton" to="." method="_on_advanced_mode_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
